_includes/extra/styles.scss
.markdown-body img {
    background-color: #1c2124 !important;
}
.content {
    background: #1c2124 !important;
    color: white !important;
}
.breadcrumb-item-selected, .breadcrumb-item[aria-current]:not([aria-current="false"]) {
    color: white !important;
}
.sidebar {
    background: #1c2124 !important;
    color: white !important;
}
.toctree > ul .toc.current a {
    color: white !important;
}
.toctree > ul .toc.current a.current {
    background: #1c2124 !important;
    color: white !important;
}
.toc.level-1.current > a {
    background: #2d3539 !important;
    color: white !important;
}
.toc.level-1.current > ul {
    background: #2d3539 !important;
    color: white !important;
}
.markdown-body table tr {
    background: #1c2124 !important;
}

html {
    background: #1c2124 !important;
}
:root {
    color-scheme: dark;
}

